<resources>
    <string name="app_name">google_signIn</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="please_sign_in_to_continue">Enter your credentials.</string>
    <string name="or_sign_in_with">-or sign in with-</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="role">Role</string>
    <string name="contact_no">Contact No.</string>
    <string name="name">Name</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">WELCOME</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_contact_no">Enter your Contact no.</string>
    <string name="enter_your_role">Enter your role</string>
    <string name="default_web_client_id" translatable="false">1054631686420-63dthul89erar49gcrt2jaqhc4mn3d0m.apps.googleusercontent.com</string>
    <string name="update">Update</string>
    <string name="enter_details">Enter Details</string>

</resources>