<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="270dp"
    android:backgroundTint="@color/white"
    android:elevation="10dp"
    app:cardCornerRadius="28dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/enter_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:text="@string/enter_details"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/name_edit"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints="name"
            android:background="@drawable/edit_text_border2"
            android:gravity="center"
            android:hint="@string/enter_your_name"
            android:textColor="@color/black"
            android:textColorHint="@color/lite_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_details" />

        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="phone"
            android:background="@drawable/edit_text_border2"
            android:gravity="center"
            android:hint="@string/enter_your_contact_no"
            android:textColor="@color/black"
            android:textColorHint="@color/lite_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_edit" />

        <EditText
            android:id="@+id/role_edit"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_border2"
            android:gravity="center"
            android:hint="@string/enter_your_role"
            android:textColor="@color/black"
            android:textColorHint="@color/lite_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_edit" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/update"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/role_edit"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>